<resources>
    <string name="app_name">Mindology</string>
    <string name="data">Properties</string>
    <string name="profile">پروفایل</string>
    <string name="logout">Logout</string>
    <string name="fragment_profile">ClientUserDTO</string>
    <string name="fragment_posts">Properties</string>
    <string name="empty_list">Empty List</string>
    <string name="check_your_connection">Check Your Internet Connection</string>
    <string name="retry">Retry</string>
    <string name="error_created">Error in Creation</string>
    <string name="error_unauthorized">Unauthorized</string>
    <string name="error_forbidden">Forbidden</string>
    <string name="error_not_found_item">Item Not Found</string>
    <string name="error_internal_server">Internal Server Error</string>
    <string name="error_any_code">Exception Occurred</string>
    <string name="got_it">Got It</string>
    <string name="garage">Garage</string>
    <string name="parking">Parking</string>
    <string name="garden">Garden</string>
    <string name="welcome">Welcome to TechRun</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="contact_us">Contact Us</string>
    <string name="excepttion">خطا</string>
    <string name="ok">اکی</string>
    <string name="main_inspections">Inspections</string>
    <string name="in_progress">In Progress</string>
    <string name="pending">Outstanding</string>
    <string name="create_inspection">Inspection</string>
    <string name="create_or_attach_property">Add or Select Property</string>
    <string name="search">Search</string>
    <string name="address">Address</string>
    <string name="types">Types</string>
    <string name="fully_furnished">Fully Furnished</string>
    <string name="partially_furnished">Partially Furnished</string>
    <string name="not_furnished">Not Furnished</string>
    <string name="addresses">Properties</string>
    <string name="create_property">Create Property</string>
    <string name="none">None</string>
    <string name="partially">Part</string>
    <string name="full">Full</string>
    <string name="furnishing">Furnishing</string>
    <string name="appartemnt">Appartment</string>
    <string name="line1">Line 1</string>
    <string name="line2">Line 2</string>
    <string name="city">شهر</string>
    <string name="country">Country</string>
    <string name="post_code">Post code</string>
    <string name="hint_text">Select here</string>
    <string name="details">Details</string>
    <string name="bedroom_count">Bedrooms</string>
    <string name="bathroom_count">Bathrooms</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone_number">شماره همراه</string>
    <string name="edit">Edit</string>
    <string name="change_password">Change Password</string>
    <string name="link_to_an_inspection">Link an Inspection</string>
    <string name="link_to_an_agency">Select a Client</string>
    <string name="date">Date</string>
    <string name="note">Note</string>
    <string name="check_in">Check-In</string>
    <string name="check_out">Check-Out</string>
    <string name="mid_term">Mid-Term</string>
    <string name="county">County</string>
    <string name="property_type">Property Type</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="existing_properties">Exisiting Properties</string>
    <string name="autofill_suggested_properties">Autofill Suggested Properties</string>
    <string name="confirm">Confirm Changes</string>
    <string name="discard">No, discard changes</string>
    <string name="select">Select</string>
    <string name="error_address_line1">The first line of address must not be empty</string>
    <string name="error_create_property">An error occurred in property creation</string>
    <string name="error_create_inspection">An error occurred in inspection property</string>
    <string name="success">Success</string>
    <string name="success_create_property">Property created successfully</string>
    <string name="success_create_inspection">Inspection created successfully</string>
    <string name="q_create_property">Create Property?</string>
    <string name="d_create_property">This property must be created before using it</string>
    <string name="cancel">Cancel</string>
    <string name="q_update_property">Update Property?</string>
    <string name="d_update_property">You have made some changes on this property, you must update property before using it.</string>
    <string name="yes">آره</string>
    <string name="error_date_less_than_today">The selected date must not be before today</string>
    <string name="save">ذخیره</string>
    <string name="success_edit_property">Property updated successfully</string>
    <string name="error_username_empty">Username must not be empty</string>
    <string name="error_password_empty">Password must not be empty</string>
    <string name="error_username_valid_email">Username must be a valid email</string>
    <string name="read_me">READ ME</string>
    <string name="send_my_password">Send my Password</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Pasword</string>
    <string name="email">پست الکترونیکی</string>
    <string name="change_photo">Change Photo</string>
    <string name="edit_profile">ویرایش پروفایل</string>
    <string name="name">نام</string>
    <string name="message">Message</string>
    <string name="send_message">Send Message</string>
    <string name="category">Category</string>
    <string name="connect_to_camera">Connect to camera</string>
    <string name="scanning_wifi_networks">Scanning wifi networks ...</string>
    <string name="network_security">Password</string>
    <string name="connect">Connect</string>
    <string name="connect_to_wifi">Connect to WiFi</string>
    <string name="submit">Submit</string>
    <string name="comment">Comment</string>
    <string-array name="inspections_array">
        <item>Check In</item>
        <item>Mid-Term</item>
        <item>Check Out</item>
    </string-array>
    <string name="theta_ip_address">192.168.1.1</string>
    <string name="label_btn_shoot">shoot</string>
    <string name="text_camera_notconnected">Not connected</string>
    <string name="text_camera_standby">Standby</string>
    <string name="text_camera_synthesizing">Image synthesizing</string>
    <string name="menu_configuration">inertia</string>
    <string name="menu_connection">connection</string>
    <string name="rotate_inertia">rotation inertia</string>
    <string name="inertia_0">none</string>
    <string name="inertia_50">weak</string>
    <string name="inertia_100">strong</string>
    <string name="delete_dialog_message">Delete this file?</string>
    <string name="dialog_positive_button">OK</string>
    <string name="label_btn_image_size">Image Size</string>
    <string name="image_size_2048x1024">2048 x 1024</string>
    <string name="image_size_5376x2688">5376 x 2688</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="error_get_inspection">Error in getting Inspection</string>
    <string name="inspection">Inspection</string>
    <string name="start">Start</string>
    <string name="sync">Sync</string>
    <string name="assets">Assets</string>
    <string name="error_change_state_inpssection">Error in changing the state</string>
    <string name="success_change_state_inpssection">State is successfully changed</string>
    <string name="areas">Areas</string>
    <string name="meters">Meters</string>
    <string name="alarms">Alarms</string>
    <string name="serial_number">Serial Number</string>
    <string name="device_title">Device\'s Title</string>
    <string name="value">Value</string>
    <string name="add_attachment">Add Attachment</string>
    <string name="error_get_profile">Error in getting profile</string>
    <string name="nick_name">Nick Name</string>
    <string name="about_me">About Me</string>
    <string name="error_edit_profile">Error in profile edit</string>
    <string name="success_edit_profile">ClientUserDTO is successfully updated</string>
    <string name="add_area">Add new area</string>
    <string name="add_meter">Add new meter</string>
    <string name="add_alarm">Add new alarm</string>
    <string name="area_title">Area Title</string>
    <string name="create_area">Create Area</string>
    <string name="add_360_image">Add New 360 Image</string>
    <string name="error_title_is_emtpy">Title is empty</string>
    <string name="success_create_area">Area successfully created</string>
    <string name="area">Area</string>
    <string name="error_create_area">Erro in creating area</string>
    <string name="create_meter">Create Meter</string>
    <string name="meter">Meter</string>
    <string name="error_serial_number_empty">Serial number is empty</string>
    <string name="error_value_is_empty">Value is empty</string>
    <string name="error_create_meter">Error in creating meter</string>
    <string name="success_create_meter">Meter successfully created</string>
    <string name="delete">Delete</string>
    <string name="confirm_delete_area">Delete this area?</string>
    <string name="success_edit_inspection">Inspection updated successfully</string>
    <string name="swap">Swap</string>
    <string name="confirm_swap_area">Confirm swap changes?</string>
    <string name="working">Is Working?</string>
    <string name="create_alarm">Create Alarm</string>
    <string name="add_new_image">Add new image</string>
    <string name="alarm_title">Alarm Title</string>
    <string name="alarm">Alarm</string>
    <string name="hotspot_tooltip">Move the image below the red icon, and then tap on the icon to insert a hotspot</string>
    <string name="success_edit_meter">Meter successfully updated</string>
    <string name="user_name">User Name</string>
    <string name="no_suggested_inspections">Nothing to suggest</string>
    <string name="no_clients">No clients found</string>
    <string name="client">Client</string>
    <string name="confirm_delete_meter">Delete this meter?</string>
    <string name="confirm_delete_alarm">Delete this alarm?</string>
    <string name="success_update_alarm">Alarm updated successfully</string>
    <string name="discard_inspection_changes">You have made some changes on this inspection \\nDo you want to confirm these changes?</string>
    <string name="complete">Complete</string>
    <string name="pick_file">Pick This 360 Image</string>
    <string name="refresh_connection">Refresh Connection</string>
    <string name="success_update_area">Area updated successfully</string>
    <string name="success_upload_files">Panoramas uploaded successfully</string>
    <string name="error_area_title_exists">An area with this name is already exists</string>
    <string name="hotspot_title">HotSpot\'s Title</string>
    <string name="hotspot_desc">Hotspot\'s Description</string>
    <string name="remove">Remove</string>
    <string name="priority">Priority</string>
    <string name="choose_from_ricoh">RICOH Theta Z</string>
    <string name="choose_from_insta360">Insta360</string>
    <string name="gallery">Gallery</string>
    <string name="could_not_connect_to_insta360_camera">Could not connect to any Insta360 Camera</string>
    <string name="warning">Warning</string>
    <string name="wrong_pano_ratio">You have selected a photo with wrong dimensions, do you want to resize this image to pick or not?</string>
    <string name="inspection_is_canceled">This inspection is canceled, you could not view this</string>
    <string name="condition">Condition</string>
    <string name="description">Description</string>
    <string name="no_inspection">You currently do not have any inspections</string>
</resources>