<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    app:startDestination="@+id/mainInspectionsScreen"
    >

    <fragment
        android:id="@+id/mainInspectionsScreen"
        android:name="com.mindology.app.ui.main.inspections.MainInspectionsFragment"
        android:label="@string/main_inspections"
        tools:layout="@layout/fragment_main_inspections" >
    </fragment>

    <fragment
        android:id="@+id/profileScreen"
        android:name="com.mindology.app.ui.main.profile.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile">
        <action
            android:id="@+id/profileToEditProfileAction"
            app:destination="@id/editProfileScreen"
            />

    </fragment>

    <fragment
        android:id="@+id/changePasswordScreen"
        android:name="com.mindology.app.ui.main.profile.ChangePasswordFragment"
        android:label="@string/change_password"
        tools:layout="@layout/fragment_change_password"/>

    <fragment
        android:id="@+id/editProfileScreen"
        android:name="com.mindology.app.ui.main.profile.EditProfileFragment"
        android:label="@string/edit_profile"
        tools:layout="@layout/fragment_edit_profile"/>

    <fragment
        android:id="@+id/inspectionDetailsScreen"
        android:name="com.mindology.app.ui.main.inspections.InspectionDetailsFragment"
        android:label="@string/inspection"
        tools:layout="@layout/fragment_inspection_details">

        <argument
            android:name="inspectionId"
            android:defaultValue="@null"
            app:argType="string"
            app:nullable="true" />

    </fragment>

</navigation>