<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/lay_all_pending_done"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingStart="9dp"
        android:paddingEnd="9dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txt_current_password"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:background="@drawable/button_background_light_gray"
            android:gravity="center"
            android:hint="@string/current_password"
            android:maxLines="1"
            android:layout_margin="5dp"
            android:paddingStart="7dp"
            android:singleLine="true"
            android:textColor="@color/YIBlue"
            android:paddingEnd="7dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_logo"
            android:textSize="13sp"
            />


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txt_new_password"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:background="@drawable/button_background_light_gray"
            android:gravity="center"
            android:hint="@string/new_password"
            android:maxLines="1"
            android:layout_margin="5dp"
            android:paddingStart="7dp"
            android:singleLine="true"
            android:textColor="@color/YIBlue"
            android:paddingEnd="7dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_logo"
            android:textSize="13sp" />


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txt_confirm_new_password"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:background="@drawable/button_background_light_gray"
            android:gravity="center"
            android:hint="@string/confirm_new_password"
            android:maxLines="1"
            android:layout_margin="5dp"
            android:paddingStart="7dp"
            android:singleLine="true"
            android:textColor="@color/YIBlue"
            android:paddingEnd="7dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_logo"
            android:textSize="13sp" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_change_password"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="14dp"
            android:backgroundTint="@color/YIBlue"
            android:text="@string/change_password"
            android:textColor="@color/YIWhite"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            app:cornerRadius="15dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password_input" />


    </LinearLayout>


</RelativeLayout>