<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="24dp"
    android:background="@drawable/background_box_white">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingStart="9dp"
            android:paddingEnd="9dp">

            <!-- description-->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txt_layout_hotspot_description"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="8dp"
                android:layout_weight="1"
                android:hint="@string/description"
                android:maxLines="1"
                android:textColorHint="@color/gray"
                app:boxBackgroundColor="@color/white"
                app:boxBackgroundMode="outline"
                app:boxCornerRadiusBottomEnd="10dp"
                app:boxCornerRadiusBottomStart="10dp"
                app:boxCornerRadiusTopEnd="10dp"
                app:boxCornerRadiusTopStart="10dp"
                app:boxStrokeColor="@color/turquoise"
                app:boxStrokeWidth="2dp"
                app:endIconTint="@color/gray"
                app:errorEnabled="true"
                app:errorIconDrawable="@null"
                app:errorTextColor="@color/red"
                app:hintTextColor="@color/gray">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txt_hotspot_description"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:inputType="none"
                    android:lines="1"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@color/coal"
                    android:textSize="13sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <!-- date-->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txt_layout_hotspot_condition"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:hint="@string/condition"
                android:maxLines="1"
                android:textColorHint="@color/gray"
                app:boxBackgroundColor="@color/white"
                app:boxBackgroundMode="outline"
                app:boxCornerRadiusBottomEnd="10dp"
                app:boxCornerRadiusBottomStart="10dp"
                app:boxCornerRadiusTopEnd="10dp"
                app:boxCornerRadiusTopStart="10dp"
                app:boxStrokeColor="@color/turquoise"
                app:boxStrokeWidth="2dp"
                app:endIconTint="@color/gray"
                app:errorEnabled="true"
                app:errorIconDrawable="@null"
                app:errorTextColor="@color/red"
                app:hintTextColor="@color/gray">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txt_hotspot_condition"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:inputType="none"
                    android:lines="1"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@color/coal"
                    android:textSize="13sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <!-- btn add attachment -->
            <LinearLayout
                android:id="@+id/btn_add_attachment"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_margin="1dp"
                android:layout_marginBottom="8dp"
                android:layout_weight="1"
                android:background="@drawable/background_box_blue"
                app:layout_constraintBottom_toBottomOf="parent">

                <TextView
                    android:id="@+id/txt_caption_btn_next"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/add_attachment"
                    android:textAppearance="@style/RegularButtonTextAppearance" />
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_attachments"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:orientation="horizontal"
                android:weightSum="2">

                <!-- btn confirm -->
                <LinearLayout
                    android:id="@+id/btn_confirm"
                    android:layout_width="0dp"
                    android:layout_height="45dp"
                    android:layout_marginEnd="4dp"
                    android:layout_weight="1"
                    android:background="@drawable/background_box_blue"
                    app:layout_constraintBottom_toBottomOf="parent">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="@string/submit"
                        android:textAppearance="@style/RegularButtonTextAppearance" />
                </LinearLayout>

                <!-- btn remove -->
                <LinearLayout
                    android:id="@+id/btn_cancel"
                    android:layout_width="0dp"
                    android:layout_height="45dp"
                    android:layout_marginStart="4dp"
                    android:layout_weight="1"
                    android:background="@drawable/background_box_bordered_red"
                    app:layout_constraintBottom_toBottomOf="parent">

                    <TextView
                        android:id="@+id/txt_btn_cancel"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="@string/cancel"
                        android:textColor="@color/red"
                        android:textSize="16sp" />
                </LinearLayout>

            </LinearLayout>


        </LinearLayout>

    </ScrollView>

</RelativeLayout>