<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <androidx.cardview.widget.CardView
        app:cardCornerRadius="6dp"
        android:layout_margin="16dp"
        android:layout_width="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_height="wrap_content">

        <com.smarteist.autoimageslider.SliderView
            android:id="@+id/imageSlider"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            app:sliderAnimationDuration="600"
            app:sliderAutoCycleDirection="back_and_forth"
            app:sliderAutoCycleEnabled="true"
            app:sliderIndicatorAnimationDuration="600"
            app:sliderIndicatorGravity="center_horizontal|bottom"
            app:sliderIndicatorMargin="15dp"
            app:sliderIndicatorOrientation="horizontal"
            app:sliderIndicatorPadding="3dp"
            app:sliderIndicatorRadius="2dp"
            app:sliderIndicatorSelectedColor="#5A5A5A"
            app:sliderIndicatorUnselectedColor="#FFF"
            app:sliderScrollTimeInSec="1"
            app:sliderStartAutoCycle="true" />

    </androidx.cardview.widget.CardView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabs"
            style="@style/TabStyle"
            android:layout_width="match_parent"
            android:layout_height="77dp"
            android:background="@color/under_app_bar"
            app:tabIndicatorColor="@color/white"
            app:tabRippleColor="@color/white"
            app:tabSelectedTextColor="@color/white"
            app:tabTextAppearance="@style/TextAppearance.MaterialComponents.Body1"
            app:tabTextColor="@color/white"
            tools:ignore="MissingConstraints">

            <com.google.android.material.tabs.TabItem
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:foregroundTint="@color/white"
                android:icon="@drawable/ic_outstanding_24px"
                android:text="@string/pending" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:icon="@drawable/ic_inprogress_24px"
                android:text="@string/in_progress" />


        </com.google.android.material.tabs.TabLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_inspections"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="77dp">

        </androidx.recyclerview.widget.RecyclerView>

        <LinearLayout
            android:id="@+id/lay_all_pending_done"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:visibility="invisible"
            android:orientation="vertical">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/ic_checkmark"
                android:tint="@color/white"
                android:layout_centerInParent="true"/>

            <TextView
                android:id="@+id/txt_all_done_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_inspection"
                android:layout_marginTop="5dp"
                android:textColor="@color/white"
                android:layout_centerInParent="true"
                android:textSize="12sp" />

        </LinearLayout>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/progress_bar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.6"
        android:background="@drawable/background_busy"
        android:clickable="true"
        android:padding="25dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true" />
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>











